# multimint

./: .gitignore  Cargo.toml
multimint/: Cargo.toml
multimint-server/: Cargo.toml
multimint-server/src/: config.rs  main.rs  mod.rs
multimint-server/src/handlers/: connect_federation.rs
multimint-swap/: Cargo.toml
multimint-swap/src/: config.rs  main.rs
multimint-swap/src/handlers/: info.rs  mod.rs  swap.rs
multimint/src/: client.rs  lib.rs  types.rs
src/: config.rs  lib.rs  main.rs  multimint.rs
src/router/: mod.rs
src/router/handlers/: connect_federation.rs  mod.rs
