[package]
name = "multimint-swap"
version = "0.1.0"
edition = "2021"
description = "Swappimint: A simple swap server for multimint. Users swap one federation's ecash for another."

[dependencies]
multimint = { path = "../multimint" }
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["json", "ws"] }
axum-macros = "0.4.0"
dotenv = "0.15.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1.4.0"
futures-util = "0.3.30"
tower-http = { version = "0.5.0", features = ["cors", "auth"] }
fedimint-core = "0.2.1"
fedimint-mint-client = "0.2.1"
fedimint-client = "0.2.1"
