[package]
name = "multimint"
version = "0.1.1"
edition = "2021"
description = "A library for managing multiple Fedimint Clients with default modules: Onchain, Lightning, and Ecash"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
fedimint = "0.0.1"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
fedimint-client = "0.2.1"
fedimint-core = "0.2.1"
fedimint-wallet-client = "0.2.1"
fedimint-mint-client = "0.2.1"
fedimint-ln-client = "0.2.1"
fedimint-rocksdb = "0.2.1"
futures-util = "0.3.30"
rand = "0.8.5"
tracing = "0.1.40"
